added sell multiplier functionality/shrimp type

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
                 Cash: <span id="cashValue">0</span>
                 <br>
                 Level: <span id="levelValue">0</span> (<span id=currentXP>0</span>/<span id="requiredXP">0</span>)
+                <br>
+                Sell Multiplier: <span id="sellMultiplier">0</span>
             </div>
             <div id="fishing">
                 <button onclick="Fish()"> Fish </button>
@@ -18,15 +20,16 @@
             </div>
 
             <div id="upgrades">
-                place to upgrade
+                Upgrades: <br>
             </div>
 
             <div id="bag">
                 Backpack: <br>
                 Minnows: <span id="MinnowCount">0</span>
+                <br>
+                Shrimp: <span id="ShrimpCount">0</span>
             </div>
         </div>
-
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
