fishing rod tiers, fixed shrimp sell

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
             </div>
 
             <div id="upgrades">
-                Upgrades: <br>
+                Upgrades: 
+                <br>
+                Shop: 
+                <br>
+                Fishing Rods:
+                <br>
+                Lures:
+                <br>
+                Baits:
             </div>
 
             <div id="bag">
